manifests/prometheus/ocf-prometheus-grafana_Ingress_prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
  labels:
    app.kubernetes.io/instance: ocf-prometheus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 7.5.5
    helm.sh/chart: grafana-6.9.1
  name: ocf-prometheus-grafana
  namespace: prometheus
spec:
  rules:
  - host: graf.ocf.berkeley.edu
    http:
      paths:
      - backend:
          serviceName: ocf-prometheus-grafana
          servicePort: 80
        path: /
  tls:
  - hosts:
    - graf.ocf.berkeley.edu
    secretName: graf-tls
